# financial-services-opencode

./: .gitignore  README.md  ai_mega_cap_analysis.md  opencode.json
.opencode/python/vibe-trading-quanta/: .LICENSE_VIBE_TRADING  pyproject.toml
.opencode/python/vibe-trading-quanta/vibe_trading_quanta/: __init__.py
.opencode/python/vibe-trading-quanta/vibe_trading_quanta/backtest/: __init__.py  benchmark.py  correlation.py  loaders  metrics.py  models.py  run_card.py  runner.py  validation.py
.opencode/python/vibe-trading-quanta/vibe_trading_quanta/factors/: _backend.py  base.py  bench_runner.py  bench_runner_strict.py  cli_handlers.py  compare_runner.py  registry.py
.opencode/python/vibe-trading-quanta/vibe_trading_quanta/loaders/: _fundamental_schema.py  _http.py  _symbol_utils.py  akshare_loader.py  alphavantage_loader.py  base.py  ccxt_loader.py  finnhub_loader.py  fmp_loader.py  fundamentals_loader.py  futu.py  india_broker_loader.py  local_loader.py  longbridge.py  okx.py  qveris_loader.py  registry.py  rsshub_events.py  sec_edgar_client.py  sina_loader.py  stooq_loader.py  tiingo_loader.py  tushare.py  tushare_fundamentals.py  yahoo_client.py  yahoo_loader.py  yfinance_loader.py
.opencode/python/vibe-trading-quanta/vibe_trading_quanta/utils/: alpha_bench_tool.py  alpha_compare_tool.py  alpha_zoo_tool.py  autopilot_tool.py  backtest_tool.py  compact_tool.py  doc_reader_tool.py  dragon_tiger_tool.py  edit_file_tool.py  financial_rigor_tool.py  fred_macro_tool.py  mcp.py  (+32 more)
.opencode/python/wif-framework/: pyproject.toml
.opencode/python/wif-framework/tests/: test_ashare.py  test_phase_allocation.py  test_portfolio.py
.opencode/python/wif-framework/wif_framework/: __init__.py  allocation.py  ashare.py  data.py  phase.py  portfolio.py  universe.py
(+937 files in other folders)
